<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">El Barbero CR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="DescripcionHeredia"> <b>DESCRIPCIÓN </b> \nSomos una franquicia de barberías premium. Estamos ubicados en Santa Ana y Heredia. \nReservas Whatsapp: 7254:6713</string>
    <string name="NumeroHeredia"><a href=""><b>  22609777</b></a></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Descripcion"> <b>DESCRIPCIÓN </b> \nSomos una franquicia de barberías premium. Estamos ubicados en Santa Ana y Heredia. \nReservas Whatsapp: 7222:4014</string>
    <string name="Contacto"><b>CONTACTO</b></string>
    <string name="Numero"><a href=""><b>  22829922</b></a></string>
    <string name="VServicio"><a><b>Ver Servicios ></b></a></string>
    <string name="Horario"><b>HORARIO DEL CENTRO</b>\n
        <b>Lunes:  </b> \n
        <b>Martes: </b>  \n
        <b>Miércoles: </b> \n
        <b>Jueves: </b> \n
        <b>Viernes: </b> \n
        <b>Sábado: </b>  \n
        <b>Domingo: </b>
    </string>
    <string name="Numeros">
        \n 11:00-21:00 \n
        11:00-21:00\n
        11:00-21:00 \n
        11:00-21:00 \n
        11:00-21:00 \n
        10:00-21:00 \n
        10:00-18:00
    </string>

    <string name="Barberia">  <b>BARBERÍA</b> 19  </string>

    <string-array name="Servicios">
        <item>BARBERÍA</item>
        <item> VIP Alisette</item>
        <item>VIP Beard Spa</item>
        <item>VIP Beard Trim</item>
        <item>VIP Beard Wax</item>
        <item>VIP Black Mask</item>
        <item>VIP Comb</item>
        <item>VIP Cut</item>
        <item>VIP Cut and Shave</item>
        <item>VIP Cut and Trim</item>
        <item>VIP Facil Spa</item>
        <item>VIP Keratine 1</item>
        <item>VIP Keratine 2</item>
        <item>VIP Keratine 3</item>
        <item>VIP Keratine 4</item>
        <item>VIP Kids</item>
        <item>VIP Shave</item>
        <item>VIP Tint Service</item>
        <item>VIP Tint Service 2</item>
    </string-array>
    <string name="title_activity_login">Inicia sesión</string>
    <!-- Strings related to login -->
    <string name="prompt_email">  Email</string>
    <string name="prompt_password">  Contraseña </string>
    <string name="Terminos">Acepto las <a>condiciones legales</a> y la <a>política de privacidad</a></string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_centro">Selecciona tu centro</string>
    <string name="title_activity_restaurar">Restaurar contraseña</string>
    <string name="title_activity_heredia">El Barbero Heredia</string>
    <string name="title_activity_staAna">El Barbero Sta Ana</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="title_activity_map_sta_ana">Map</string>
    <string name="title_activity_map_heredia">Map</string>


    <string name="bsa1"> <b>VIP Alisette                                      22.600.00</b> \n</string>
    <string name="bsa2"><b>VIP Beard Spa                                      8.000.00</b>\n</string>
    <string name="bsa3"><b>VIP Beard Trim                                      8.000.00</b>\n</string>
    <string name="bsa4"><b>VIP Beard Wax                                      7.000.00</b>\n</string>
    <string name="bsa5"><b>VIP Black Mask                                      6.000.00</b>\n</string>
    <string name="bsa6"><b>VIP Comb                                           3.500.00</b>\n</string>
    <string name="bsa7"><b>VIP Cut                                          10.000.00</b>\n</string>
    <string name="bsa8"><b>VIP Cut and Shave                                      15.000.00</b>\n</string>
    <string name="bsa9"><b>VIP Cut and Trim                                      15.000.00</b>\n</string>
    <string name="bsa10"><b>VIP Facil Spa                                      15.000.00</b>\n</string>
    <string name="bsa11"><b>VIP Keratine 1                                      23.730.00</b>\n</string>
    <string name="bsa12"><b>VIP Keratine 2                                      33.900.00</b>\n</string>
    <string name="bsa13"><b>VIP Keratine 3                                      22.600.00</b>\n</string>
    <string name="bsa14"><b>VIP Keratine 4                                      22.600.00</b>\n</string>
    <string name="bsa15"><b>VIP Kids                                      22.600.00</b>\n</string>
    <string name="bsa16"><b>VIP Shave                                      22.600.00</b>\n</string>
    <string name="bsa17"><b>VIP Tint Service                                      22.600.00</b>\n</string>
    <string name="bsa18"><b>VIP Tint Service 2                                      22.600.00</b>\n</string>




</resources>