<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="81dp">


        <TextView
            android:layout_width="392dp"
            android:layout_height="146dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="14sp"
            android:text="@string/DescripcionHeredia"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18dp"
            app:fontFamily="sans-serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/contacto"
            android:layout_width="317dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="176dp"
            android:lineSpacingExtra="14sp"
            android:text="@string/Contacto"

            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18dp"
            app:fontFamily="sans-serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="OnClick" />

        <TextView
            android:id="@+id/nu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="212dp"
            android:drawableLeft="@drawable/call"
            android:lineSpacingExtra="14sp"
            android:text="@string/NumeroHeredia"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"

            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp"
            app:fontFamily="sans-serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="OnClick" />

        <TextView
            android:layout_width="196dp"
            android:layout_height="277dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="260dp"
            android:lineSpacingExtra="14sp"
            android:text="@string/Horario"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18dp"
            app:fontFamily="sans-serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="196dp"
            android:layout_height="275dp"
            android:layout_marginStart="136dp"
            android:layout_marginLeft="136dp"
            android:layout_marginTop="260dp"
            android:lineSpacingExtra="14sp"
            android:text="@string/Numeros"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18dp"
            app:fontFamily="sans-serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>